--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mvc-node-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,10 @@
   },
   "homepage": "https://github.com/neginmahmoudi/MVC-node-project#readme",
   "dependencies": {
+    "cores": "^0.8.5",
+    "date-fns": "^2.29.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.0"
   }
 }
