--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/neginmahmoudi/MVC-node-project#readme",
   "dependencies": {
     "cores": "^0.8.5",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
+    "mongoose": "^6.9.1",
     "nodemon": "^2.0.20",
     "uuid": "^9.0.0"
   }
